--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.0",
     "bcryptjs": "^3.0.2",
     "config": "^4.1.1",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
+    "react-redux": "^9.2.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
